# Spark

./: CMakeLists.txt  README.md  sourcelist.cmake  spark.rc
.github/workflows/: build.yml
icon/: icon_mac.icns
src/: SparkCalc.cpp  SparkCalc.h  SparkUI.cpp  SparkUI.h  minimal.cpp
src/Sheets/: Sheet.cpp  Sheet.hpp
src/UI/: MathTextBox.cpp  MathTextBox.hpp
src/line-data/: LineData.cpp  LineData.hpp  Sheet.cpp  Sheet.hpp
src/operation-tree/: OperationTree.cpp  OperationTree.hpp
src/operation-tree/nodes/: MathNode.cpp  MathNode.hpp  OperationNode.cpp  OperationNode.hpp  ValueNode.cpp  ValueNode.hpp
ui/: Spark.fbp
